<resources>
    <string name="app_name">EffectiveMobileTest</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search_view_hint">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="btn_buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="bot_nav_action_1">Explorer</string>
    <string name="bot_nav_action_2">Cart</string>
    <string name="bot_nav_action_3">Favorites</string>
    <string name="bot_nav_action_4">Profile</string>
    <string name="location">Пермь, ул. 9 Мая</string>
    <string name="filter_title">Filter options</string>
    <string name="brand_title">Brand</string>
    <string name="price_title">Price</string>
    <string name="size_title">Size</string>
    <string name="product_details">Product Details</string>
    <string name="select_color_details">Select color and capacity</string>
    <string name="add_cart">Add to Cart</string>
    <string name="add_address">Add address</string>
    <string name="my_cart_title">My Cart</string>

    <string name="sign_in_title">Sign in</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_apple">Sign in with Apple</string>

    <string name="login_title">Welcome back</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>

    <string name="btn_upload_profile">Upload item</string>
    <string name="tv_sign_in">Log in</string>
    <string name="tv_change_photo">Change photo</string>
    <string name="tv_full_name">Иван Иванов</string>
    <string name="btn_trade_store">Trade store</string>
    <string name="btn_payment_method">Payment method</string>
    <string name="btn_balance">Balance</string>
    <string name="summ_balance">1600$</string>
    <string name="btn_trade_history">Trade history</string>
    <string name="btn_restore_purchase">Restore purchase</string>
    <string name="btn_help">Help</string>
    <string name="btn_log_out">Log out</string>
    <string name="tv_total_cart">Total</string>
    <string name="tv_delivery">Delivery</string>
    <string name="btn_checkout">Checkout</string>
    <string name="tv_details_title">Title</string>
    <string name="btn_add_to_cart">Add to Cart $ %1$s</string>

    <string-array name="models">
        <item>Samsung</item>
        <item>Apple</item>
    </string-array>
    <string-array name="prices">
        <item>$300-$500</item>
        <item>$500-$1000</item>
        <item>$1000-$10000</item>
    </string-array>
    <string-array name="sizes">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>
    </string-array>

    <string-array name="select_categories">
        <item>Books</item>
        <item>Computers</item>
        <item>Health</item>
        <item>Phones</item>
        <item>Tools</item>
    </string-array>

    <string-array name="tab_titles">
        <item>Shop</item>
        <item>Details</item>
        <item>Features</item>
    </string-array>
</resources>