<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_search_white"
        android:title="@string/bot_nav_action_1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_cart_white"
        android:title="@string/bot_nav_action_2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/bot_nav_action_3"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_profile_white"
        android:title="@string/bot_nav_action_4"/>
</menu>