<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_shade1"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photoProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@drawable/man" />

    <TextView
        android:id="@+id/tvChangePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_change_photo"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_full_name"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/style_btn"
        android:drawableStart="@drawable/ic_upload_item"
        android:drawablePadding="50dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/btn_upload_profile"
        android:textAlignment="textStart"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/style_btn_profile"
        android:drawableStart="@drawable/ic_card"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/btn_trade_store" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/style_btn_profile"
        android:drawableStart="@drawable/ic_card"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/btn_payment_method" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBalance"
            style="@style/style_btn_profile"
            android:drawableStart="@drawable/ic_card"
            android:text="@string/btn_balance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btnBalance"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/summ_balance"
            android:textColor="@color/myColor1"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/style_btn_profile"
        android:drawableStart="@drawable/ic_card"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/btn_trade_history" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/style_btn_profile"
        android:drawableStart="@drawable/ic_restore"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/btn_restore_purchase" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/style_btn_profile"
        android:drawableStart="@drawable/ic_help"
        android:text="@string/btn_help" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        style="@style/style_btn_profile"
        android:drawableStart="@drawable/ic_logout"
        android:text="@string/btn_log_out" />

</LinearLayout>