<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signInViewModel"
            type="com.example.effectivemobiletest.presentation.ui.signin.SignInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_shade1"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        tools:context=".presentation.ui.signin.SignInActivity">

        <TextView
            style="@style/style_title"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_in_title" />

        <EditText
            style="@style/style_edit_text_sign_in"
            android:hint="@string/hint_first_name"
            android:text="@={signInViewModel.firstName}" />

        <EditText
            style="@style/style_edit_text_sign_in"
            android:hint="@string/hint_last_name"
            android:text="@={signInViewModel.lastName}"/>

        <EditText
            style="@style/style_edit_text_sign_in"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:text="@={signInViewModel.email}"/>

        <EditText
            style="@style/style_edit_text_sign_in"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@={signInViewModel.password}"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_btn"
            android:onClick="@{() -> signInViewModel.signInJob()}"
            android:text="@string/btn_sign_in"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="@{() -> signInViewModel.login()}"
                android:text="Log in"
                android:textColor="@color/myColor1"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google_logo" />

                <TextView
                    style="@style/style_text_view_sign_in_with"
                    android:text="@string/sign_in_google" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_apple_logo" />

                <TextView
                    style="@style/style_text_view_sign_in_with"
                    android:text="@string/sign_in_apple" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>

