<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_shade1"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="80dp"
    android:paddingRight="40dp"
    android:paddingBottom="80dp"
    tools:context=".presentation.ui.login.LoginActivity">

    <TextView
        style="@style/style_title"
        android:text="@string/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFirstNameLayout"
        style="@style/style_layout_edit_text_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            style="@style/style_edit_text_login"
            android:hint="@string/hint_first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        style="@style/style_layout_edit_text_login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/style_edit_text_login"
            android:drawablePadding="-35dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/style_btn"
        android:text="@string/btn_login"
        android:textColor="@color/white" />
</LinearLayout>