<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFilter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_filter_view"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnFilterClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/style_icons"
            android:backgroundTint="@color/myColor2"
            android:padding="5dp"
            android:src="@drawable/ic_close_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_title"
            android:textAlignment="center"
            android:textColor="@color/myColor2"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFilterDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/myColor1"
            android:text="Done" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_title"
            android:textColor="@color/myColor2"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            style="@style/style_spinner"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/models" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_title"
            android:textColor="@color/myColor2"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            style="@style/style_spinner"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/prices" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_title"
            android:textColor="@color/myColor2"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            style="@style/style_spinner"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sizes" />
    </LinearLayout>
</LinearLayout>