<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_shade1"
    android:orientation="horizontal"
    tools:context=".presentation.ui.homepage.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/location"
                    android:textColor="@color/myColor2"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_down_arrow" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivFilterSettings"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_filter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_category"
                android:textColor="@color/myColor2"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/myColor1"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViewCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/searchView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_search_view"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_view_hint"
                android:searchIcon="@drawable/ic_search_orange" />

            <ImageView
                android:id="@+id/icon_scanner"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/style_icons_circle"
                android:backgroundTint="@color/myColor1"
                android:padding="4dp"
                android:src="@drawable/ic_qr_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hot_sales"
                android:textColor="@color/myColor2"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/myColor1"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViewHotSales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/pbHotSales"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/best_seller"
                android:textColor="@color/myColor2"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/myColor1"
                android:textSize="18sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbBestSeller"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridView
                android:id="@+id/gwBestSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="200dp"
                android:fastScrollEnabled="true"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="2"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>